Updated the type

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "10n/health-vault-magento-1",
-  "type": "library",
+  "type":"magento-module",
   "description": "Magento 1 adapter that validates the health of cron jobs and offline tasks for the 10n Job Health Vault (https://vh.10n-software.com/)",
   "license": "Apache-2.0",
   "authors": [
